// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-VigVT djCdRx"
  >
    <div
      class="sc-bZQynM cWyHmc"
    >
      <div
        class="sc-gzVnrw iMtlFY"
      >
        <div
          class="sc-htoDjs fdtLZY"
        >
          <div
            class="sc-dnqmqq kKbVPv"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-iwsKbI jQhHGA"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gZMcBi idZcZf"
        >
          <button
            class="sc-ifAKCX cAdBCb"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-fjdhpX eRpYQP"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <div
              class="sc-jTzLTM gSIlWD"
            >
              Unknown Reason
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballow with issue which could not be determined.
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-jzJRlG ggDwyK"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-VigVT djCdRx"
  >
    <div
      class="sc-bZQynM cWyHmc"
    >
      <div
        class="sc-gzVnrw iMtlFY"
      >
        <div
          class="sc-htoDjs fdtLZY"
        >
          <div
            class="sc-dnqmqq kKbVPv"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-iwsKbI jQhHGA"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gZMcBi idZcZf"
        >
          <button
            class="sc-ifAKCX cAdBCb"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-fjdhpX eRpYQP"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <div
              class="sc-jTzLTM gSIlWD"
            >
              Overvote
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot sheet with an
               
              <strong>
                overvote
              </strong>
              .
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-jzJRlG ggDwyK"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-VigVT djCdRx"
  >
    <div
      class="sc-bZQynM cWyHmc"
    >
      <div
        class="sc-gzVnrw iMtlFY"
      >
        <div
          class="sc-htoDjs fdtLZY"
        >
          <div
            class="sc-dnqmqq kKbVPv"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-iwsKbI jQhHGA"
          >
            Ballot Scanner
          </div>
        </div>
        <div
          class="sc-gZMcBi idZcZf"
        >
          <button
            class="sc-ifAKCX cAdBCb"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-bdVaJa kYuSve"
    >
      <div
        class="sc-bwzfXH hLOwzs"
      >
        <div
          class="sc-fjdhpX eRpYQP"
        >
          <div
            class="sc-htpNat eawaaV"
          >
            <div
              class="sc-jTzLTM gSIlWD"
            >
              Unreadable
            </div>
            <p>
              This last scanned sheet 
              <strong>
                was not tabulated
              </strong>
              .
            </p>
            <h4>
              Original Ballot Scan
            </h4>
            <p>
              Remove ballot and create a duplicate ballot for the Resolution Board to review.
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Original Ballot Removed
              </button>
            </p>
            <h4>
              Duplicate Ballot Scan
            </h4>
            <p>
              Confirm sheet was reviewed by the Resolution Board and tabulate as 
              <strong>
                unreadable
              </strong>
              .
              <br />
              <button
                class="sc-ifAKCX hViQmt"
                type="button"
              >
                Tabulate Duplicate Ballot
              </button>
            </p>
          </div>
          <div
            class="sc-jzJRlG ggDwyK"
          >
            <div>
              <img
                alt="front"
                src="/front/url"
              />
            </div>
            <div>
              <img
                alt="back"
                src="/back/url"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
